starting work on the rest interface files, with default tests
